--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,80 +5,79 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-2.46MB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-948.5KB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-440.1KB/s(Youtube:不良林), server: 527hk1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 527hk1.fans8.xyz}}
   - {name: 🇨🇳 中国-1014.9KB/s(Youtube:不良林), server: 103.56.60.235, port: 3381, type: trojan, password: ffec9f6ea19e1dd1, skip-cert-verify: true}
   - {name: 🇨🇳 中国-506.3KB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
+  - {name: 🇺🇸 美国-4.97MB/s(Youtube:不良林), server: 107.167.24.6, port: 17001, type: trojan, password: d4e9e6bb-daa4-44ed-aa29-d1b8d00ba7d6, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-1.47MB/s(Youtube:不良林), server: 185.167.116.253, port: 9011, type: ss, cipher: aes-256-cfb, password: M3t2ZEQcMGRWBjRa}
+  - {name: 🇦🇺 澳大利亚-901.7KB/s(Youtube:不良林), server: 185.167.116.253, port: 9005, type: ss, cipher: aes-256-cfb, password: ZET59LF6DvCC8KVt}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-948.5KB/s(Youtube:不良林)
-      - 🇭🇰 香港-440.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-1014.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-506.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.97MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.47MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-901.7KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-2.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-948.5KB/s(Youtube:不良林)
-      - 🇭🇰 香港-440.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-1014.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-506.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.97MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.47MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-901.7KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-948.5KB/s(Youtube:不良林)
-      - 🇭🇰 香港-440.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-1014.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-506.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.97MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.47MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-901.7KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-440.1KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-2.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-948.5KB/s(Youtube:不良林)
-      - 🇭🇰 香港-440.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-1014.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-506.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.97MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.47MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-901.7KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-948.5KB/s(Youtube:不良林)
-      - 🇭🇰 香港-440.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-1014.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-506.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.97MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.47MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-901.7KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-2.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-948.5KB/s(Youtube:不良林)
-      - 🇭🇰 香港-440.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-1014.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-506.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.97MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.47MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-901.7KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -94,11 +93,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-2.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-948.5KB/s(Youtube:不良林)
-      - 🇭🇰 香港-440.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-1014.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-506.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.97MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.47MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-901.7KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
