--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-1.88MB/s(Youtube:不良林), server: xjp.ziqiyun.xyz, port: 443, type: trojan, password: 7b561e94-42f3-4f92-979c-4cf97c328025, sni: xjp.ziqiyun.xyz, skip-cert-verify: true}
   - {name: 🇨🇳 中国-1.01MB/s(Youtube:不良林), server: mc.xiaohouzi.club, port: 28325, type: vmess, uuid: c900facf-7e5d-3caf-a49e-c4bb1996ca95, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v2ray, ws-headers: {Host: mc.xiaohouzi.club}}
-  - {name: 🇮🇳 印度-2.03MB/s(Youtube:不良林), server: jgwhdlb4.gaox.ml, port: 443, type: trojan, password: 081a4198-d664-4bc5-a7c6-e35982da964b, sni: jgwhdlb4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.63MB/s(Youtube:不良林), server: 138.2.52.84, port: 23140, type: vmess, uuid: e03f030e-87a6-4282-9656-461732cc3b1f, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 138.2.52.84}}
-  - {name: 🇨🇳 中国-2.25MB/s(Youtube:不良林), server: 103.56.60.235, port: 3381, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.34MB/s(Youtube:不良林), server: 120.233.186.71, port: 3381, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
   - {name: 🇨🇳 中国-1.15MB/s(Youtube:不良林), server: 120.233.186.71, port: 3381, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇨🇳 台湾-1.18MB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
-  - {name: 🇺🇸 美国-424.4KB/s(Youtube:不良林), server: cd.rutracker-cn.com, port: 443, type: trojan, password: ukMzuFSmIXDvgW0h, sni: cd.rutracker-cn.com, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-763.8KB/s(Youtube:不良林), server: 152.67.102.225, port: 46360, type: vmess, uuid: 61fe4d4e-8c7e-4f2e-9b9f-49f38991be7d, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.78MB/s(Youtube:不良林), server: 103.56.60.235, port: 3381, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-936.3KB/s(Youtube:不良林), server: 159.27.115.21, port: 64078, type: vmess, uuid: 477fb2a0-daf4-3041-b6f6-5de3f42ecc69, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 159.27.115.21}}
+  - {name: 🇦🇺 澳大利亚-410.3KB/s(Youtube:不良林), server: jgwxn2.gaox.ml, port: 443, type: trojan, password: c2b60d6a-a2f5-40ff-b7f9-f7658abcbf26, sni: jgwxn2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-796.6KB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
+  - {name: 🇨🇳 中国-7.92MB/s(Youtube:不良林), server: sha-cu-001.omo-m0m.com, port: 5601, type: trojan, password: 9d6a601d-8593-39b5-8861-86ac78c0c5ad, sni: sha-cu-001.omo-m0m.com, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.66MB/s(Youtube:不良林), server: au2-2.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-2.nigirocloud.com, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-868.1KB/s(Youtube:不良林), server: 2.tiantang.cf, port: 59195, type: trojan, password: pA52tFTlGZ, sni: 2.tiantang.cf, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-360.6KB/s(Youtube:不良林), server: usa004.369boy.com, port: 14001, type: trojan, password: d4e9e6bb-daa4-44ed-aa29-d1b8d00ba7d6, sni: usa004.369boy.com, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.88MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.01MB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.03MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.34MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.15MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-424.4KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-763.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.78MB/s(Youtube:不良林)
+      - 🇨🇳 中国-936.3KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-410.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-796.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.92MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.66MB/s(Youtube:不良林)
+      - 🇭🇰 香港-868.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-360.6KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-1.88MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.01MB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.03MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.34MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.15MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-424.4KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-763.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.78MB/s(Youtube:不良林)
+      - 🇨🇳 中国-936.3KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-410.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-796.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.92MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.66MB/s(Youtube:不良林)
+      - 🇭🇰 香港-868.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-360.6KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.88MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.01MB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.03MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.34MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.15MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-424.4KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-763.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.78MB/s(Youtube:不良林)
+      - 🇨🇳 中国-936.3KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-410.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-796.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.92MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.66MB/s(Youtube:不良林)
+      - 🇭🇰 香港-868.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-360.6KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇨🇳 台湾-1.18MB/s(Youtube:不良林)
+      - 🇭🇰 香港-868.1KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-1.88MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.01MB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.03MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.34MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.15MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-424.4KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-763.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.78MB/s(Youtube:不良林)
+      - 🇨🇳 中国-936.3KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-410.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-796.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.92MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.66MB/s(Youtube:不良林)
+      - 🇭🇰 香港-868.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-360.6KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.88MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.01MB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.03MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.34MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.15MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-424.4KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-763.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.78MB/s(Youtube:不良林)
+      - 🇨🇳 中国-936.3KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-410.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-796.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.92MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.66MB/s(Youtube:不良林)
+      - 🇭🇰 香港-868.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-360.6KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.88MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.01MB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.03MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.34MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.15MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-424.4KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-763.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.78MB/s(Youtube:不良林)
+      - 🇨🇳 中国-936.3KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-410.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-796.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.92MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.66MB/s(Youtube:不良林)
+      - 🇭🇰 香港-868.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-360.6KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.88MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.01MB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.03MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.34MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.15MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-424.4KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-763.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.78MB/s(Youtube:不良林)
+      - 🇨🇳 中国-936.3KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-410.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-796.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.92MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.66MB/s(Youtube:不良林)
+      - 🇭🇰 香港-868.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-360.6KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
