--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-1.01MB/s(Youtube:不良林), server: mc.xiaohouzi.club, port: 28325, type: vmess, uuid: c900facf-7e5d-3caf-a49e-c4bb1996ca95, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v2ray, ws-headers: {Host: mc.xiaohouzi.club}}
+  - {name: 🇺🇸 美国-2.85MB/s(Youtube:不良林), server: xjp.ziqiyun.xyz, port: 443, type: trojan, password: 7b561e94-42f3-4f92-979c-4cf97c328025, sni: xjp.ziqiyun.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.85MB/s(Youtube:不良林), server: 103.56.62.145, port: 3381, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-2.85MB/s(Youtube:不良林), server: jgwdb3.gaox.ml, port: 443, type: trojan, password: 8d2d5953-d649-4034-94f2-72f2df2623da, sni: jgwdb3.gaox.ml, skip-cert-verify: true}
   - {name: 🇨🇳 中国-1.15MB/s(Youtube:不良林), server: 120.233.186.71, port: 3381, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.78MB/s(Youtube:不良林), server: 103.56.60.235, port: 3381, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-936.3KB/s(Youtube:不良林), server: 159.27.115.21, port: 64078, type: vmess, uuid: 477fb2a0-daf4-3041-b6f6-5de3f42ecc69, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 159.27.115.21}}
-  - {name: 🇦🇺 澳大利亚-410.3KB/s(Youtube:不良林), server: jgwxn2.gaox.ml, port: 443, type: trojan, password: c2b60d6a-a2f5-40ff-b7f9-f7658abcbf26, sni: jgwxn2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-796.6KB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
-  - {name: 🇨🇳 中国-7.92MB/s(Youtube:不良林), server: sha-cu-001.omo-m0m.com, port: 5601, type: trojan, password: 9d6a601d-8593-39b5-8861-86ac78c0c5ad, sni: sha-cu-001.omo-m0m.com, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.66MB/s(Youtube:不良林), server: au2-2.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-2.nigirocloud.com, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-868.1KB/s(Youtube:不良林), server: 2.tiantang.cf, port: 59195, type: trojan, password: pA52tFTlGZ, sni: 2.tiantang.cf, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-360.6KB/s(Youtube:不良林), server: usa004.369boy.com, port: 14001, type: trojan, password: d4e9e6bb-daa4-44ed-aa29-d1b8d00ba7d6, sni: usa004.369boy.com, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-332.2KB/s(Youtube:不良林), server: 107.167.24.6, port: 17001, type: trojan, password: d4e9e6bb-daa4-44ed-aa29-d1b8d00ba7d6, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.08MB/s(Youtube:不良林), server: 116.129.253.134, port: 3381, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-8.16MB/s(Youtube:不良林), server: sha-cu-001.omo-m0m.com, port: 5602, type: trojan, password: 9d6a601d-8593-39b5-8861-86ac78c0c5ad, sni: sha-cu-001.omo-m0m.com, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.74MB/s(Youtube:不良林), server: 212.81.47.15, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.59MB/s(Youtube:不良林), server: 45.35.84.162, port: 443, type: vmess, uuid: aba50dd4-5484-3b05-b14a-4661caf862d5, alterId: 4, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws, ws-headers: {Host: 45.35.84.162}}
+  - {name: 🇺🇸 美国-2.23MB/s(Youtube:不良林), server: kr01.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr01.wangxd.life, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.85MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.85MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.78MB/s(Youtube:不良林)
-      - 🇨🇳 中国-936.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-410.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-796.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.92MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.66MB/s(Youtube:不良林)
-      - 🇭🇰 香港-868.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-360.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-332.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.74MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.59MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-1.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.85MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.85MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.78MB/s(Youtube:不良林)
-      - 🇨🇳 中国-936.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-410.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-796.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.92MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.66MB/s(Youtube:不良林)
-      - 🇭🇰 香港-868.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-360.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-332.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.74MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.59MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.85MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.85MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.78MB/s(Youtube:不良林)
-      - 🇨🇳 中国-936.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-410.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-796.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.92MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.66MB/s(Youtube:不良林)
-      - 🇭🇰 香港-868.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-360.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-332.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.74MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.59MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-868.1KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-1.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.85MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.85MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.78MB/s(Youtube:不良林)
-      - 🇨🇳 中国-936.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-410.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-796.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.92MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.66MB/s(Youtube:不良林)
-      - 🇭🇰 香港-868.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-360.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-332.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.74MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.59MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.85MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.85MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.78MB/s(Youtube:不良林)
-      - 🇨🇳 中国-936.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-410.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-796.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.92MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.66MB/s(Youtube:不良林)
-      - 🇭🇰 香港-868.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-360.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-332.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.74MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.59MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-1.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.85MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.85MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.78MB/s(Youtube:不良林)
-      - 🇨🇳 中国-936.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-410.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-796.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.92MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.66MB/s(Youtube:不良林)
-      - 🇭🇰 香港-868.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-360.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-332.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.74MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.59MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-1.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.85MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.85MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.78MB/s(Youtube:不良林)
-      - 🇨🇳 中国-936.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-410.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-796.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.92MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.66MB/s(Youtube:不良林)
-      - 🇭🇰 香港-868.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-360.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-332.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.74MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.59MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
